feat(service): generate service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <!-- Opertations Header -->
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="2" rowHeight="60px">
     <mat-grid-tile>
         <span class="mat-display-1" style="margin-bottom: 0;">Tasks List</span>
     </mat-grid-tile>
@@ -9,3 +9,6 @@
         <app-button color="primary" text="Add" (btnClick)="togglAddTask()"></app-button>
     </mat-grid-tile>
 </mat-grid-list>
+
+<!-- tasks -->
+<app-tasks></app-tasks>
