--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,9 +5,9 @@
         </button>
         <span>Task Tracker</span>
         <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
             <mat-icon>favorite</mat-icon>
-        </button>
+        </button> -->
         <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
             <mat-icon>share</mat-icon>
         </button>
