--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,17 +1,24 @@
-<mat-card
-    *ngIf="!showAddTask"
+<mat-card *ngIf="!showAddTask"
     [ngStyle]="{ margin: '0 64px', display: 'flex', alignItems: 'center', justifyContent: 'center', marginBottom: '45px', backgroundColor: '#fff'}">
-    <form class="example-form">
+    <form class="example-form" (ngSubmit)="onSubmit">
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label [ngStyle]="{color: '#333'}">Task Name</mat-label>
-            <input matInput [ngStyle]="{color: '#333'}" class="example-full-input" placeholder="Ex. Pizza" value="">
+            <input matInput name="text" id="text" [ngStyle]="{color: '#333'}" class="example-full-input"
+                placeholder="Ex. Pizza" [(ngModel)]="text" value="">
         </mat-form-field>
 
         <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label [ngStyle]="{color: '#333'}">Description</mat-label>
-            <textarea matInput [ngStyle]="{color: '#333'}" class="example-full-input"
-                placeholder="Ex. It makes me feel..."></textarea>
+            <mat-label [ngStyle]="{color: '#333'}">Day & Time</mat-label>
+            <input matInput name="day" id="day" [ngStyle]="{color: '#333'}" class="example-full-input"
+                placeholder="Ex. Pizza" [(ngModel)]="day" value="">
         </mat-form-field>
-        <button mat-raised-button color="primary">Primary</button>
+
+        <section class="checkbox-section">
+                <mat-checkbox name="reminder" color="accent" id="reminder" [(ngModel)]="reminder">Set reminder</mat-checkbox>
+        </section>
+
+        <section class="btn-section">
+            <button mat-raised-button type="submit" color="primary">Save Task</button>
+        </section>
     </form>
 </mat-card>
