--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -9,7 +9,7 @@
 </mat-grid-list>
 
 <!-- add task form -->
-<app-add-task show={toggle}></app-add-task>
+<app-add-task show={toggle} (onAddTask)="addTask($event)"></app-add-task>
 
 <!-- backgroundColor: '#f4f4f4', color: '#333', -->
 <mat-card [ngStyle]="{ margin: '0 64px'}">
