--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -4,7 +4,7 @@
         <span class="mat-display-1" style="margin-bottom: 0;">Tasks List</span>
     </mat-grid-tile>
     <mat-grid-tile>
-        <app-button color="{{showAddTask ? 'accet' : 'primary'}}" text="{{showAddTask ? 'Add' : 'Close'}}" (btnClick)="togglAddTask()"></app-button>
+        <app-button color="{{showAddTask ? 'primary' : 'accet'}}" text="{{showAddTask ? 'Close' : 'Add'}}" (btnClick)="togglAddTask()"></app-button>
     </mat-grid-tile>
 </mat-grid-list>
 
