--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <!-- tasks -->
-<app-tasks></app-tasks>
+<router-outlet></router-outlet>
+
+<!-- footer -->
+<app-footer></app-footer>
